#8 Fix UI Switch distorted width

--- a/src/assets/scss/components/_custom.scss
+++ b/src/assets/scss/components/_custom.scss
@@ -17,7 +17,7 @@ body {
 }
 
 .switch.switch-small small {
-  width: 1.8em;
+  width: 2.0em;
   height: 2.0em;
-  right: calc(100% - 1.7em);
+  right: calc(100% - 1.8em);
 }
